--- a/MERN-Tutorial/package.json
+++ b/MERN-Tutorial/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node backend/server.js",
-    "server": "nodemon backend/server.js",
-    "client": "npm start --prefix frontend"
+    "server": "nodemon backend/server.js"
   },
   "author": "",
   "license": "ISC",
